--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,12 @@ body header {
           align-items: center;
 }
 
+@media (min-width: 750px) {
+  body header {
+    height: 35vh;
+  }
+}
+
 body header img {
   width: 10%;
   min-width: 60px;
@@ -56,6 +62,27 @@ body main {
   background-color: #00303F;
   width: 100%;
   padding: 2%;
+}
+
+body main section .listaColeccion li {
+  background-color: #94B5C0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin-top: 2%;
 }
 
 body main div {
