--- a/styles.scss
+++ b/styles.scss
@@ -12,6 +12,9 @@ body{
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        @media (min-width: 750px) {
+            height: 35vh;
+        }
         img{
             width: 10%;
             min-width: 60px;
@@ -36,6 +39,21 @@ body{
         background-color: #00303F;
         width: 100%;
         padding: 2%;
+        section{
+            .listaColeccion{
+                li{
+                    background-color: #94B5C0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    text-align: center;
+                    width: 100%;
+                    height: 100%;
+                    margin-top: 2%;
+                }
+            }
+        }
         div{
             display: flex;
             flex-direction: column;
