--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,43 @@ body header img {
   min-width: 60px;
 }
 
-body header ul li {
+body header nav {
+  display: none;
+  position: relative;
+}
+
+body header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+@media (min-width: 750px) {
+  body header nav ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+body header nav ul li {
   color: white;
   text-decoration: none;
   list-style: none;
 }
 
-body header ul li a {
+body header nav ul li a {
   text-decoration: none;
   color: white;
 }
@@ -60,8 +90,23 @@ body main {
       -ms-flex-align: center;
           align-items: center;
   background-color: #00303F;
-  width: 100%;
   padding: 2%;
+}
+
+body main section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 body main section .listaColeccion li {
@@ -80,8 +125,29 @@ body main section .listaColeccion li {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   text-align: center;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 100px;
+  margin-top: 2%;
+}
+
+body main section .listaColeccion2 li {
+  background-color: #94B5C0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+  width: 200px;
+  height: 100px;
   margin-top: 2%;
 }
 
