--- a/styles.scss
+++ b/styles.scss
@@ -19,14 +19,25 @@ body{
             width: 10%;
             min-width: 60px;
         }
-        ul{
-            li{
-                color: white;
-                text-decoration: none;
-                list-style: none;
-                a{
-                    text-decoration: none;
+        nav{
+            display: none;
+            position: relative;
+            ul{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
+                @media (min-width: 750px) {
+                    flex-direction: row;
+                }
+                li{
                     color: white;
+                    text-decoration: none;
+                    list-style: none;
+                    a{
+                        text-decoration: none;
+                        color: white;
+                    }
                 }
             }
         }
@@ -37,9 +48,12 @@ body{
         justify-content: center;
         align-items: center;
         background-color: #00303F;
-        width: 100%;
         padding: 2%;
         section{
+            display: flex;
+            flex-direction: row;
+            align-items:flex-start;
+            justify-content: space-evenly;
             .listaColeccion{
                 li{
                     background-color: #94B5C0;
@@ -48,8 +62,21 @@ body{
                     align-items: center;
                     justify-content: space-evenly;
                     text-align: center;
-                    width: 100%;
-                    height: 100%;
+                    width: 200px;
+                    height: 100px;
+                    margin-top: 2%;
+                }
+            }
+            .listaColeccion2{
+                li{
+                    background-color: #94B5C0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    text-align: center;
+                    width: 200px;
+                    height: 100px;
                     margin-top: 2%;
                 }
             }
