--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,13 @@ body header img {
   min-width: 60px;
 }
 
+body header #intento1 {
+  background-color: #716F81;
+  width: 50px;
+  height: 50px;
+  border-radius: 2px;
+}
+
 body header nav {
   display: none;
   position: relative;
