--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,12 @@ body{
             width: 10%;
             min-width: 60px;
         }
+        #intento1{
+            background-color: #716F81;
+            width: 50px;
+            height: 50px;
+            border-radius: 2px;
+        }
         nav{
             display: none;
             position: relative;
