Guardado 1 16 de Diciembre

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ body header nav ul li {
   color: white;
   text-decoration: none;
   list-style: none;
+  margin: 1%;
+  margin-left: 2%;
 }
 
 body header nav ul li a {
@@ -111,9 +113,19 @@ body main section {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  width: 90%;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+body main section .listaColeccion {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr, 1fr;
+      grid-template-columns: 1fr, 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
 }
 
 body main section .listaColeccion li {
@@ -135,6 +147,16 @@ body main section .listaColeccion li {
   width: 200px;
   height: 100px;
   margin-top: 2%;
+}
+
+body main section .listaColeccion2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr, 1fr;
+      grid-template-columns: 1fr, 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  margin-left: 1%;
 }
 
 body main section .listaColeccion2 li {
