--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,10 @@ body header img {
 }
 
 body header #intento1 {
-  background-color: #716F81;
   width: 50px;
   height: 50px;
   border-radius: 2px;
+  background-image: url(https://cdn-icons-png.flaticon.com/512/1384/1384172.png);
 }
 
 body header nav {
@@ -145,7 +145,7 @@ body main section .listaColeccion li {
           justify-content: space-evenly;
   text-align: center;
   width: 200px;
-  height: 100px;
+  height: 200px;
   margin-top: 2%;
 }
 
