--- a/styles.scss
+++ b/styles.scss
@@ -20,10 +20,10 @@ body{
             min-width: 60px;
         }
         #intento1{
-            background-color: #716F81;
             width: 50px;
             height: 50px;
             border-radius: 2px;
+            background-image: url(https://cdn-icons-png.flaticon.com/512/1384/1384172.png);
         }
         nav{
             display: none;
@@ -75,7 +75,7 @@ body{
                     justify-content: space-evenly;
                     text-align: center;
                     width: 200px;
-                    height: 100px;
+                    height: 200px;
                     margin-top: 2%;
                 }
             }
