--- a/styles.css
+++ b/styles.css
@@ -105,11 +105,13 @@ body main {
 body main #statik {
   position: fixed;
   background-color: #9eaa5c;
-  border: goldenrod;
-  border-width: 3px;
+  border: #bbd39c;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
   width: 200px;
   height: 50px;
-  top: 40%;
+  top: 30%;
   left: 77%;
 }
 
