--- a/styles.scss
+++ b/styles.scss
@@ -20,10 +20,9 @@ body{
             min-width: 60px;
         }
         #intento1{
-            width: 50px;
-            height: 50px;
+            width: 0px;
+            height: 0px;
             border-radius: 2px;
-            background-image: url(https://cdn-icons-png.flaticon.com/512/1384/1384172.png);
         }
         nav{
             display: none;
@@ -78,6 +77,38 @@ body{
             align-items:flex-start;
             width: 90%;
             justify-content: space-evenly;
+            .tiendaDiv{
+                display: grid;
+                grid-template-columns: 1fr, 1fr;
+                grid-template-rows: auto;
+                div{
+                    background-color: #94B5C0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    text-align: center;
+                    width: 200px;
+                    height: 200px;
+                    margin-top: 2%;
+                }
+            }
+            .tiendaDiv2{
+                display: grid;
+                grid-template-columns: 1fr, 1fr;
+                grid-template-rows: auto;
+                div{
+                    background-color: #94B5C0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    text-align: center;
+                    width: 200px;
+                    height: 200px;
+                    margin-top: 2%;
+                }
+            }
             .listaColeccion{
                 display: grid;
                 grid-template-columns: 1fr, 1fr;
