--- a/styles.scss
+++ b/styles.scss
@@ -77,10 +77,11 @@ body{
             align-items:flex-start;
             width: 90%;
             justify-content: space-evenly;
-            .tiendaDiv{
-                display: grid;
-                grid-template-columns: 1fr, 1fr;
-                grid-template-rows: auto;
+            .masvendido{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-evenly;
                 div{
                     background-color: #94B5C0;
                     display: flex;
@@ -88,24 +89,7 @@ body{
                     align-items: center;
                     justify-content: space-evenly;
                     text-align: center;
-                    width: 200px;
-                    height: 200px;
-                    margin-top: 2%;
-                }
-            }
-            .tiendaDiv2{
-                display: grid;
-                grid-template-columns: 1fr, 1fr;
-                grid-template-rows: auto;
-                div{
-                    background-color: #94B5C0;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: space-evenly;
-                    text-align: center;
-                    width: 200px;
-                    height: 200px;
+                    margin: 0%;
                     margin-top: 2%;
                 }
             }
@@ -152,6 +136,17 @@ body{
             text-align: center;
             color: white;
             margin-right: 4%;
+        }
+        .article2{
+            display: grid;
+            grid-template-columns: 50%, 50%;
+            grid-template-rows: 200px, 200px, 200px, 200px;
+            input{
+                width: 100px;
+            }
+            img{
+                width: 100px;
+            }
         }
         article{
             display: flex;
