--- a/styles.scss
+++ b/styles.scss
@@ -71,12 +71,11 @@ body{
               position: inherit;
             }
         }
-        section{
+        .sectionEspecifica{
             display: flex;
-            flex-direction: row;
-            align-items:flex-start;
-            width: 90%;
-            justify-content: space-evenly;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             .masvendido{
                 display: flex;
                 flex-direction: row;
@@ -89,10 +88,18 @@ body{
                     align-items: center;
                     justify-content: space-evenly;
                     text-align: center;
-                    margin: 0%;
+                    margin: 1%;
                     margin-top: 2%;
+                    width: 15%;
                 }
             }
+        }
+        section{
+            display: flex;
+            flex-direction: row;
+            align-items:flex-start;
+            width: 90%;
+            justify-content: space-evenly;
             .listaColeccion{
                 display: grid;
                 grid-template-columns: 1fr, 1fr;
