--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,8 @@ body header img {
 }
 
 body header #intento1 {
-  width: 0px;
-  height: 0px;
+  width: 50px;
+  height: 50px;
   border-radius: 2px;
 }
 
@@ -341,6 +341,12 @@ body main article form div {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 0%;
+}
+
+body main article form div input {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 body main article form div .otroInput {
