--- a/styles.scss
+++ b/styles.scss
@@ -20,8 +20,8 @@ body{
             min-width: 60px;
         }
         #intento1{
-            width: 0px;
-            height: 0px;
+            width: 50px;
+            height: 50px;
             border-radius: 2px;
         }
         nav{
@@ -180,6 +180,9 @@ body{
                     justify-content: space-evenly;
                     align-items: center;
                     margin-right: 0%;
+                    input{
+                        width: 130px;
+                    }
                     .otroInput{
                         background-color: #716F81;
                         width: 5%;
