--- a/styles.scss
+++ b/styles.scss
@@ -112,8 +112,11 @@ body{
                     justify-content: space-evenly;
                     text-align: center;
                     width: 200px;
-                    height: 200px;
+                    height: 230px;
                     margin-top: 2%;
+                    img{
+                        width: 150px;
+                    }
                 }
             }
             .listaColeccion2{
@@ -129,8 +132,11 @@ body{
                     justify-content: space-evenly;
                     text-align: center;
                     width: 200px;
-                    height: 200px;
+                    height: 230px;
                     margin-top: 2%;
+                    img{
+                        width: 150px;
+                    }
                 }
             }
         }
