--- a/styles.scss
+++ b/styles.scss
@@ -173,6 +173,9 @@ body{
                 text-align: center;
                 color: white;
                 margin-right: 3%;
+                button{
+                    text-decoration: none;
+                }
             }
             form{
                 background-color: #94B5C0;
